syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "gRPCStockServiceContracts";
package gRPCStockServiceContracts;

service StockService {
  rpc GetStockStream (StockDataRequest) returns (stream StockData);
}

message StockDataRequest {
  string requestedStockSymbol = 1;
}

message StockData {
  string stockSymbol = 1;
  uint32 currentPrice = 2;
  google.protobuf.Timestamp dateTimeStamp = 3;
}